# tee

./: .gitignore
tee/: meson.build
tee/include/: align.h  asm.h  bit.h  bitcnt.h  bitrev.h  byterev.h  log.h  macros.h  mem_region.h  mem_type.h  swap.h  ta_info.h  tee_ta_perm_rule_def.h  types.h  tz_perm.h
tee/products/myna2/stb_2g_cma/: oem_setting.cfg
tee/products/platypus/stb_2g_cma_iommu/: oem_setting.cfg
tee/tee/: meson.build
tee/tee/app/: meson.build
tee/tee/app/tee_daemon/: meson.build  ree_ca_file_op.c  ree_ca_file_op.h  ree_ca_rpmb_op.c  ree_ca_rpmb_op.h  ree_sys_callback_ipc_server.c  ree_sys_callback_ipc_server.h  rpmb.c  rpmb.h  rpmb_ioctl.h  tee_ca_daemon.c
tee/tee/client_api/: tee_client_api.c  tee_client_api.h  tee_client_config.h  tee_client_const.h  tee_client_type.h  tee_client_util.c  tee_client_util.h
tee/tee/common/: tee_comm.h  tee_common.h  tee_log.h
tee/tee/internal_api/: tee_internal_arith_api.h  tee_internal_core_api.h  tee_internal_core_common.h  tee_internal_core_mem_api.h  tee_internal_core_panic_api.h  tee_internal_core_prop_api.h  tee_internal_crypto_asymmetric_api.h  tee_internal_crypto_cipher_api.h  tee_internal_crypto_generic_api.h  tee_internal_crypto_key_api.h  tee_internal_crypto_rpmb.h  tee_internal_info_api.h  tee_internal_mutex.h  tee_internal_private_api.h  tee_internal_storage_api.h  tee_internal_storage_generic_api.h  tee_internal_storage_persistent_api.h  tee_internal_storage_transient_api.h  tee_internal_time_api.h  tee_ta.h
tee/tee/mgr/: tee_ca_mgr_cmd.c  tee_ca_mgr_cmd.h  tee_ca_sys_cmd.c  tee_ca_sys_cmd.h  tee_mgr_cmd.h  tee_sys_cmd.h
tee/tee/ree/: ree_sys_callback.c  ree_sys_callback.h  ree_sys_callback_cmd.h  ree_sys_callback_dummy.c  ree_sys_callback_ipc_client.c  ree_sys_callback_ipc_client.h  ree_sys_callback_linux.c  ree_sys_callback_logger.h  ree_sys_callback_mutex.c  ree_sys_callback_mutex.h  ree_sys_callback_mutex_ext.c  ree_sys_callback_mutex_ext.h  ree_sys_callback_semaphore.c  ree_sys_callback_semaphore.h  ree_sys_callback_user.c
tee/tools/gen_memzone/: gen_memzone.py
tee/tools/gen_oem_setting/: gen_oem_setting.py
tee/tz/client_api/: tz_client_api.h  tz_client_api_dummy.c  tz_client_api_linux_kernel.c  tz_client_api_user.c
tee/tz/common/: smc.S  smc.h  tz_boot_arg.h  tz_boot_cmd.h  tz_boot_param.c  tz_boot_param.h  tz_boot_param_value.c  tz_boot_param_value.h  tz_comm.c  tz_comm.h  tz_errcode.h  tz_nw_ioctl.h
tee/tz/driver/: Makefile  config.h  tz_compat.c  tz_dev_logger.c  tz_driver.c  tz_driver.h  tz_driver_private.h  tz_log.h  tz_shm.c  tz_utils.c  tz_utils.h
tee/tz/nw_api/: tz_nw_api.h  tz_nw_boot.c  tz_nw_boot.h  tz_nw_comm.c  tz_nw_comm.h  tz_nw_comm_protocol.h  tz_nw_osal.h  tz_nw_osal_dummy.c  tz_nw_osal_linux.c  tz_nw_psci.c  tz_nw_psci.h  tz_nw_sys_callback.c  tz_nw_sys_callback.h  tz_nw_task_client.c  tz_nw_task_client.h
(+518 files in other folders)
